# AutoDeliveryRobot

./: .gitignore  LICENSE  README.md  app  requirements.txt  ws_ros_bridge.py
mobile/DeliveryBotApp/: delivery_proxy.py  height=220dpp_contententcontentent  kill_port.sh  local.properties  map_publisher_test.py  map_server_http.py  map_server_http_qos.py  mjpeg_server.py  run.sh  settings.gradle  setup.cfg  setup.py  start_map.sh  start_mjpeg.sh  start_rosbridge.sh
mobile/DeliveryBotApp/_bak/: CameraActivity.kt  MainActivity.kt  MapActivity.kt
mobile/DeliveryBotApp/app/: build.gradle
mobile/DeliveryBotApp/delivery_qr/: __init__.py  qr_generator_node.py
mobile/DeliveryBotApp/resource/: delivery_qr
mobile/DeliveryBotApp/srv/: GenerateQr.srv
mobile/DeliveryBotApp/tools/: adb_app.sh  fix_manifest_and_namespace.sh  insert_map_activity.sh
src/andino/andino_description/urdf/: andino.urdf.xacro
src/andino/andino_mobile_bridge/: package.xml  setup.cfg  setup.py
src/andino/andino_mobile_bridge/andino_mobile_bridge/: __init__.py  mobile_bridge.py  topic_monitor.py
src/andino/andino_mobile_bridge/launch/: mobile_bridge.launch.py
src/andino/andino_mobile_bridge/resource/: andino_mobile_bridge
src/andino_gz/: tree_output.txt
src/andino_gz/.github/workflows/: ci.yml
src/andino_gz/andino_gz/config/: bridge_config.yaml
src/andino_gz/andino_gz/launch/: andino_gz.launch.py  app.launch.py
src/deliverybot_bringup/: package.xml  setup.py
src/deliverybot_bringup/launch/: app.launch.py
src/deliverybot_bringup/resource/: deliverybot_bringup
(+88 files in other folders)
