<?xml version="1.0"?>
<package format="3">
  <name>andino_mobile_bridge</name>
  <version>0.0.0</version>
  <description>Bridge mobile app address/phone into ROS orders</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
